task-8/final-exam-expose-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-exam
  namespace: sodikmirzo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: final-exam
  type: ClusterIP
