task-8/final-exam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-exam
  namespace: sodikmirzo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test.ittech.uz
      http:
        paths:
          - backend:
              service:
                name: final-exam
                port:
                  number: 80
            path: /
            pathType: Prefix
